--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_API_BASE_URL=https://project-management-server-7d5h.onrender.com/project-management/v1
+VITE_API_BASE_URL=http://localhost:3000/project-management/v1/
+ENVIROMENT=development
